--- a/call.html
+++ b/call.html
@@ -122,6 +122,9 @@
                         <a class="nav-link active" href="call.html">Call for Papers</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="program.html">Program</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="index.html#organizers">Organizers</a>
                     </li>
                 </ul>
@@ -137,7 +140,7 @@
                 <span class="badge bg-light text-dark p-3" style="font-size: 1.1rem;">May 21, 2026</span>
                 <span class="badge bg-info p-3 ms-2" style="font-size: 1.1rem;">San Francisco, CA</span>
             </p>
-            <p class="mt-3" style="font-size: 1.1rem;">To be held in conjunction with the 47th IEEE Symposium on Security and Privacy (IEEE S&P 2026)</p>
+            <p class="mt-3" style="font-size: 1.1rem;">Co-located with the <a href="https://sp2026.ieee-security.org/index.html" target="_blank" style="color: white; text-decoration: underline;">47th IEEE Symposium on Security and Privacy (IEEE S&P 2026)</a></p>
         </div>
     </header>
 
@@ -228,7 +231,7 @@
                     </p>
                 </section>
 
-                <section id="format">
+                <!-- <section id="format">
                     <h2 class="section-title">Workshop Format</h2>
                     <p>The workshop will feature:</p>
                     <ul>
@@ -236,21 +239,16 @@
                         <li>Paper sessions grouped by theme (defenses, provenance, deployment, cross-disciplinary)</li>
                         <li>An interactive panel on <strong>"Coexistence of AI and Human Creativity"</strong> and/or <strong>"Perturbation-based protections: help or harm?"</strong> A pro–con debate with leading proponents and critics (e.g., Florian Tramer, Nicholas Carlini), using pre-circulated theses and timed rebuttals to encourage a healthy, rigorous exchange.</li>
                     </ul>
-                </section>
+                </section> -->
 
                 <section id="dates">
                     <h2 class="section-title">Important Dates</h2>
                     <ul>
-                        <li><strong>Submission Deadline:</strong> February 2, 2026</li>
-                        <li><strong>Notification:</strong> February 22, 2026</li>
-                        <li><strong>Camera-ready:</strong> March 1, 2026</li>
+                        <li><strong>Paper submission deadline:</strong> February 13, 2026</li>
+                        <li><strong>Notification to authors:</strong> March 20, 2026</li>
+                        <li><strong>Camera-ready deadline:</strong> Early April, 2026</li>
                         <li><strong>Workshop Date:</strong> May 21, 2026</li>
                     </ul>
-                </section>
-
-                <section id="pc">
-                    <h2 class="section-title">Program Committee</h2>
-                    <p class="text-muted">To be announced</p>
                 </section>
 
                 <section id="contact">
@@ -266,18 +264,18 @@
         <div class="container">
             <div class="row mb-4">
                 <div class="col-md-4 mb-3">
-                    <img src="img/logo-ieee.jpg" alt="IEEE" style="max-height: 80px;">
+                    <img src="img/logo-ieee.jpg" alt="IEEE" style="max-height: 60px;">
                 </div>
                 <div class="col-md-4 mb-3">
-                    <img src="img/logo-ieee-cs.png" alt="IEEE Computer Society" style="max-height: 80px;">
+                    <img src="img/logo-ieee-cs.png" alt="IEEE Computer Society" style="max-height: 60px;">
                 </div>
                 <div class="col-md-4 mb-3">
-                    <img src="img/trojan.png" alt="IACR" style="max-height: 80px;">
+                    <img src="img/trojan.png" alt="IACR" style="max-height: 60px;">
                 </div>
             </div>
             <p><strong>ArtSec 2026</strong>: Workshop on Artwork Security and Provenance in the Age of AI</p>
             <p class="small mb-0">
-                Held in conjunction with <a href="https://sp2026.ieee-security.org/index.html" style="color: var(--ieee-blue);">IEEE S&P 2026</a>.
+                Co-located with the <a href="https://sp2026.ieee-security.org/index.html" style="color: var(--ieee-blue);">IEEE S&P 2026</a>.
             </p>
         </div>
     </footer>
