--- a/call.html
+++ b/call.html
@@ -198,6 +198,10 @@
                 <section id="submission">
                     <h2 class="section-title">Submission Guidelines</h2>
                     
+                    <p>
+                        Please submit your papers via the HotCRP: <a href="https://hotcrp.artsec26.ieee-security.org/" target="_blank">https://hotcrp.artsec26.ieee-security.org/</a>
+                    </p>
+
                     <h5 class="topic-header mt-4">Length Limits</h5>
                     <ul>
                         <li><strong>Full papers:</strong> up to 10 pages (excluding references and appendices)</li>
@@ -253,7 +257,7 @@
 
                 <section id="contact">
                     <h2 class="section-title">Contact</h2>
-                    <p>For questions, please contact: <a href="mailto:artsec2026@ieee-security.org">artsec2026@ieee-security.org</a></p>
+                    <p>For questions, please contact: <a href="mailto:artsec26@sp.ieee-security.org">artsec26@sp.ieee-security.org</a></p>
                 </section>
 
             </div>
