--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
                 <section id="contact">
                     <h2 class="section-title">Contact</h2>
-                    <p>For questions, please contact: <a href="mailto:artsec2026@ieee-security.org">artsec2026@ieee-security.org</a></p>
+                    <p>For questions, please contact: <a href="mailto:artsec26@sp.ieee-security.org">artsec26@sp.ieee-security.org</a></p>
                 </section>
 
             </div>
