changed a few words in the main page.

--- a/index.html
+++ b/index.html
@@ -164,12 +164,12 @@
             <div class="col-12">
                 
                 <section id="home">
-                    <h2 class="section-title">Motivation and Theme</h2>
+                    <h2 class="section-title">Vision and Focus</h2>
                     <p>
                         Generative AI systems have transformed how images, music, video, and text are produced and consumed, but they also create unprecedented risks for artists and creative industries. Large-scale ingestion of copyrighted works by AI models has intensified concerns about consent, attribution, compensation, and creative control. These practices raise core issues of security, privacy, provenance, and trust, and demand rigorous, interdisciplinary solutions.
                     </p>
                     <p>
-                        ArtSec will be a dedicated venue for the security community to address these challenges with technical depth and cross-domain relevance. The workshop emphasizes: (1) technical defenses (imperceptible perturbations, watermarking/fingerprinting, provenance tracing, auditing and detection, dataset governance and unlearning), (2) measurement and evaluation (benchmarks, redteaming, robustness analyses), and (3) deployment and policy translation (legal-technical frameworks, industry adoption paths, and standards).
+                        ArtSec is a dedicated venue for the security community to address these challenges with technical depth and cross-domain relevance. The workshop emphasizes: (1) technical defenses (imperceptible perturbations, watermarking/fingerprinting, provenance tracing, auditing and detection, dataset governance and unlearning, AI-generated content detection), (2) measurement and evaluation (benchmarks, redteaming, robustness analyses), and (3) deployment and policy translation (legal-technical frameworks, industry adoption paths, and standards).
                     </p>
                 </section>
 
