updated name of Howie

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <h2 class="section-title">Steering Committee</h2>
                     <p class="mb-2"><a href="https://people.cs.uchicago.edu/~ravenben/" target="_blank"><strong>Ben Y. Zhao</strong></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;University of Chicago</p>
                     <p class="mb-2"><a href="https://homes.cs.washington.edu/~yoshi/" target="_blank"><strong>Yoshi Kohno</strong></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Georgetown University</p>
-                    <p class="mb-2"><a href="https://steinhardt.nyu.edu/people/howard-singer" target="_blank"><strong>Howard Singer</strong></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;New York University</p>
+                    <p class="mb-2"><a href="https://steinhardt.nyu.edu/people/howie-singer" target="_blank"><strong>Howie Singer</strong></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;New York University</p>
                     <h5 class="mt-4 mb-3" style="color: var(--ieee-light);">Arts Community</h5>
                     <p class="mb-2"><a href="https://sarahcandersen.com/about" target="_blank"><strong>Sarah Andersen</strong></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Illustrator and Cartoonist</p>
                     <p class="mb-2"><a href="https://en.wikipedia.org/wiki/Benn_Jordan" target="_blank"><strong>Benn Jordan</strong></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Composer and Electronic Musician</p>
