--- a/index.html
+++ b/index.html
@@ -236,5 +236,22 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Default Statcounter code for artsec26
+https://artsec26.ieee-security.org/ -->
+<script type="text/javascript">
+var sc_project=13190222; 
+var sc_invisible=1; 
+var sc_security="a44e5fd9"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="https://c.statcounter.com/13190222/0/a44e5fd9/1/"
+alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
 </body>
 </html>
