--- a/index.html
+++ b/index.html
@@ -193,7 +193,41 @@
 
                 <section id="pc">
                     <h2 class="section-title">Program Committee</h2>
-                    <p class="text-muted">To be announced</p>
+                    <!-- <p class="text-muted">To be announced</p> -->
+                    <!-- <ul>
+                    <li>Giovanni Apruzzese, University of Liechtenstein</li>
+                    <li>Guanke Chen, Wuhan University</li>
+                    <li>Jinghui Chen, The Pennsylvania State University</li>
+                    <li>Hanqing Guo, University of Hawai'i at Mānoa</li>
+                    <li>Yiming Li, Nanyang Technological University</li>
+                    <li>Enze "Alex" Liu, Carnegie Mellon University</li>
+                    <li>Syed Irfan Ali Meerza, University of Tennessee, Knoxville</li>
+                    <li>Nikhil Singh, Dartmouth College</li>
+                    <li>Fnu Suya, University of Tennessee, Knoxville</li>
+                    <li>Bimal Viswanath, Virginia Tech</li>
+                    <li>Zhen Xiang, University of Georgia</li>
+                    <li>Qiben Yan, Michigan State University</li>
+                    <li>Yuchen Yang, The Pennsylvania State University</li>
+                    <li>Zhiyuan Yu, Texas A&amp;M University</li>
+                    <li>Ning Zhang, Washington University in St. Louis</li>
+                    </ul> -->
+                    <p class="mb-2"><strong>Giovanni Apruzzese</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;University of Liechtenstein</p>
+                    <p class="mb-2"><strong>Guanke Chen</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Wuhan University</p>
+                    
+                    <p class="mb-2"><strong>Hanqing Guo</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;University of Hawai'i at Mānoa</p>
+                    <p class="mb-2"><strong>Romain Hennequin</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Deezer Research </p>
+                    <p class="mb-2"><strong>Yiming Li</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nanyang Technological University</p>
+                    <p class="mb-2"><strong>Enze "Alex" Liu</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Carnegie Mellon University</p>
+                    <p class="mb-2"><strong>Syed Irfan Ali Meerza</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;University of Tennessee, Knoxville</p>
+                    <p class="mb-2"><strong>Nikhil Singh</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Dartmouth College</p>
+                    <p class="mb-2"><strong>Fnu Suya</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;University of Tennessee, Knoxville</p>
+                    <p class="mb-2"><strong>Bimal Viswanath</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Virginia Tech</p>
+                    <p class="mb-2"><strong>Zhen Xiang</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;University of Georgia</p>
+                    <p class="mb-2"><strong>Qiben Yan</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Michigan State University</p>
+                    <p class="mb-2"><strong>Yuchen Yang</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The Pennsylvania State University</p>
+                    <p class="mb-2"><strong>Zhiyuan Yu</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Texas A&amp;M University</p>
+                    <p class="mb-2"><strong>Ning Zhang</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Washington University in St. Louis</p>
+
                 </section>
 
                 <section id="dates">
