--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     <ul>
                         <li><strong>Paper submission deadline:</strong> February 13, 2026 AoE</li>
                         <li><strong>Notification to authors:</strong> March 20, 2026</li>
-                        <li><strong>Camera-ready deadline:</strong> Early April, 2026 AoE</li>
+                        <li><strong>Camera-ready deadline:</strong> Early April, 2026</li>
                         <li><strong>Workshop Date:</strong> May 21, 2026</li>
                     </ul>
                 </section>
