--- a/call.html
+++ b/call.html
@@ -248,7 +248,7 @@
                 <section id="dates">
                     <h2 class="section-title">Important Dates</h2>
                     <ul>
-                        <li><strong>Paper submission deadline:</strong> February 13, 2026</li>
+                        <li><strong>Paper submission deadline:</strong> February 13, 2026 AoE</li>
                         <li><strong>Notification to authors:</strong> March 20, 2026</li>
                         <li><strong>Camera-ready deadline:</strong> Early April, 2026</li>
                         <li><strong>Workshop Date:</strong> May 21, 2026</li>
