--- a/call.html
+++ b/call.html
@@ -248,9 +248,11 @@
                 <section id="dates">
                     <h2 class="section-title">Important Dates</h2>
                     <ul>
-                        <li><strong>Paper submission deadline:</strong> February 13, 2026 AoE</li>
-                        <li><strong>Notification to authors:</strong> March 20, 2026</li>
-                        <li><strong>Camera-ready deadline:</strong> Early April, 2026</li>
+                        <!-- <li><strong>Paper submission deadline:</strong> February 13, 2026 AoE</li>
+                        <li><strong>Notification to authors:</strong> March 20, 2026</li> -->
+                        <li><strong>Paper Submission Deadline:</strong> <s>February 13, 2026 AoE</s> February 28, 2026 AoE</li>
+                        <li><strong>Paper Notification of Acceptance:</strong> <s>March 20, 2026</s> March 27, 2026</li>
+                        <li><strong>Camera-ready Deadline:</strong> Early April, 2026</li>
                         <li><strong>Workshop Date:</strong> May 21, 2026</li>
                     </ul>
                 </section>
